Changes modal close button to avoid stretched look

--- a/client/src/components/ModalAlert/styles/ModalAlert.css
+++ b/client/src/components/ModalAlert/styles/ModalAlert.css
@@ -20,3 +20,12 @@
     color: black;
     box-shadow: 0 0 0 1px black;
 }
+
+.close-modal-button {
+    background-color: lightgray;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
